--- a/src/layouts/main.jade
+++ b/src/layouts/main.jade
@@ -17,4 +17,6 @@ html()
 
 
 		//- Scripts
+		script(src="/node_modules/d3/d3.js")
+		script(src="/node_modules/svg-typewriter/svgtypewriter.js")
 		script(src="/javascripts/app.js")
