--- a/src/index.jade
+++ b/src/index.jade
@@ -1,6 +1,5 @@
 extends layouts/main
 
 block content
-		p Bar chart!
-		div(style="width:50%; padding: 5em; height: 10em")
-			svg(id = "pie")
+		h3 Bar chart!
+		svg(id = "pie", width="500" height="320")
