--- a/src/layouts/main.jade
+++ b/src/layouts/main.jade
@@ -11,12 +11,13 @@ html()
 		link(rel="stylesheet", href="/stylesheets/main.css")
 
 	//- Body
-	body(style="width:100%; height:100%; position:relative")
+	body(style="width:100%; height:100%; position:relative; padding:5em")
 		//- Content
 		block content
 
 
 		//- Scripts
-		script(src="/node_modules/d3/d3.js")
-		script(src="/node_modules/svg-typewriter/svgtypewriter.js")
+		//- script(src="/node_modules/d3/d3.js")
+		//- script(src="/node_modules/svg-typewriter/svgtypewriter.js")
+		//- script(src="http://localhost:9999/plottable.js")
 		script(src="/javascripts/app.js")
