stacked column into bar chart

--- a/src/index.jade
+++ b/src/index.jade
@@ -3,3 +3,5 @@ extends layouts/main
 block content
 		h3 Donnut chart
 		svg(id = "pie", width="500" height="320")
+		h3 StackedBar chart
+		svg(id = "StackedBar", width="500" height="320")
