--- a/src/index.jade
+++ b/src/index.jade
@@ -4,9 +4,18 @@ block content
 		div(style = "display:flex")
 			div(style = "width = 50%")
 				h3 Donnut chart
-				svg(id = "pie", width="500" height="320")
-				h3 StackedBar chart
-				svg(id = "StackedBar", width="500" height="320")
+				svg(id = "pieB", width="500" height="320")
 			div(style = "width = 50%")
 				h3 Line chart
 				svg(id = "line", width="500" height="320")
+		div(style = "display:flex")
+			div(style = "width = 50%")
+				h3 Pie chart B
+				svg(id = "pie", width="500" height="320")
+			div(style = "width = 50%")
+				h3 StackedBar chart A
+				svg(id = "StackedBar", width="500" height="320")
+		div(style = "display:flex")
+			div(style = "width = 50%")
+				h3 Stacked chart B
+					svg(id = "stackedB", width="500" height="320")
