--- a/src/layouts/main.jade
+++ b/src/layouts/main.jade
@@ -6,7 +6,7 @@ html()
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		meta(http-equiv="x-ua-compatible", content="ie=edge")
 
-		title Frontend
+		title DH Charts
 
 		link(rel="stylesheet", href="/stylesheets/main.css")
 
