--- a/src/layouts/main.jade
+++ b/src/layouts/main.jade
@@ -11,9 +11,7 @@ html()
 		link(rel="stylesheet", href="/stylesheets/main.css")
 
 	//- Body
-	body(style="width:100%; height:100%; position:relative; padding:5em")
+	body(style="width:100%; height:100%; position:relative")
 		//- Content
 		block content
-
-
 		script(src="/javascripts/app.js")
