using foreign object, yeahhh :smiley:

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,4 +1,10 @@
-.plottable .out-labels, .plottable text {
+.plottable .out-labels, .plottable text{
+  font-size: 0.8em;
+  font-weight: bold;
+}
+.p-labels{
+  color: white;
+  text-align:center;
   font-size: 0.8em;
   font-weight: bold;
 }
